test/sema/imported-c-header-has-file-scope.delta.output
inputs/imported-c-header-has-file-scope/second-file.delta:2:5: error: unknown identifier 'foo'
    foo()
    ^
